# segment-phasing-fp-env

./: MANIFEST.in  Makefile  README.md  make_modes.ipynb  pyproject.toml
segment_phasing_fp_env/: __init__.py  __main__.py  psf.py  psf_autodiff.py  segment_phasing_fp_env.py
segment_phasing_fp_env/images/: modes64.npy  pup64.npy
