[project]
name = "segment-phasing-fp-env"
version = "0.0.1"
description = """GMT focal-plane segment phasing as a Farama Gymnasium environment."""
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Jesse Cranney", email = "jesse.cranney@anu.edu.au" },
]
maintainers = [
    { name = "Jesse Cranney", email = "jesse.cranney@anu.edu.au" },
]
keywords = ["segment-phasing", "adaptive optics", "gymnasium", "reinforcement-learning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "gymnasium ~= 0.29.0",
    "numpy ~= 1.26.4",
    "pygame ~= 2.5.0"
]

[build-system]
requires = ["setuptools ~= 69.5.1"]

[project.urls]
homepage = "https://github.com/jcranney/segment-phasing-fp-env"
documentation = "https://github.com/jcranney/segment-phasing-fp-env"
repository = "https://github.com/jcranney/segment-phasing-fp-env.git"
changelog = "https://github.com/jcranney/segment-phasing-fp-env/releases"
